# gigiac-starter-bot

./: .env.example  LICENSE  README.md  pyproject.toml
gigiac_bot/: __init__.py  __main__.py  config.py
gigiac_bot/api/: gigiac.py
gigiac_bot/commissioner/: manage.py  post.py  review.py
gigiac_bot/utils/: logger.py  retry.py
gigiac_bot/worker/: browse.py  deliver.py  propose.py
